<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <!-- Email Address : for Local Testing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/email_label"
            android:layout_marginTop="@dimen/activity_vertical_margin_small"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/emailInput"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/textToBeChanged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/header_margin"
            android:layout_marginTop="@dimen/header_margin"
            android:text="@string/hello_world"
            android:textAppearance="?android:attr/textAppearanceLarge"/>


        <EditText
            android:id="@+id/editTextUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/type_something"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/changeTextBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_text"
            android:layout_gravity="center_horizontal"/>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:id="@+id/activityChangeTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/open_activity_and_change_text"/>

    </LinearLayout>

</ScrollView>